fixed landing overlap on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,6 @@
 } 
 
 #landing {
-    height: 100vh;
     margin: 0;
 }
 
